# bazel-scala-sandbox

./: BUILD  MODULE.bazel
src/main/scala/cmd/: BUILD  Runner.scala
src/test/scala/com/example/: ExampleTest.scala
