bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_scala", version = "7.2.2")

# VSCode/Cursor Metals extension needs explicit declaration
bazel_dep(name = "rules_python", version = "1.8.4")
bazel_dep(name = "rules_java", version = "9.5.0")

register_toolchains("//:custom_scala_toolchain")

scala_version = "3.3.7"

scala_config = use_extension(
    "@rules_scala//scala/extensions:config.bzl",
    "scala_config",
)
scala_config.settings(scala_version = scala_version)

scala_deps = use_extension(
    "@rules_scala//scala/extensions:deps.bzl",
    "scala_deps",
)
scala_deps.settings(
    fetch_sources = True,
)
scala_deps.scala()
scala_deps.scalatest()

bazel_dep(name = "rules_jvm_external", version = "6.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.scala-lang.modules:scala-xml_2.13:2.4.0",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "java_temurin",
    digest = "sha256:44a6b43221053ab8cdac5c634070a0731fb4aab9e629098ed72b026e76ccdab8",  # linux/amd64 manifest digest
    image = "eclipse-temurin",
    tag = "21.0.5_11-jre-noble",
)
use_repo(oci, "java_temurin")
